# Yukon

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
Decks/: EasyWinDeck.txt  InvalidDeck_Cardvalue_invalid.txt  InvalidDeck_DuplicateCard.txt  InvalidDeck_Invalid_card_length.txt  InvalidDeck_Invalid_card_length_short.txt  InvalidDeck_Invalid_suit.txt  InvalidDeck_Toolong.txt  InvalidDeck_Tooshort.txt  deck1.txt
etc/: Linkedlist1.pu  MVC.pu
src/: main.c  main.h  second.c  second.h
src/cliview/: command_reader.c  command_reader.h  printer.c  printer.h  screen.c  screen.h  writer.c  writer.h
src/controller/: command_controller.c  command_controller.h  controller.c  controller.h
src/model/: card.c  card.h  cardShuffler.c  cardShuffler.h  deck.c  deck.h  linkedlist.c  linkedlist.h  model.c  model.h  move.h  yukon_model.c  yukon_model.h
src/sdlview/: sdl_cards.c  sdl_cards.h  sdl_command_parser.c  sdl_command_parser.h  sdl_deck.c  sdl_deck.h  sdl_fps_counter.c  sdl_fps_counter.h  sdl_image_loader.c  sdl_image_loader.h  sdlinit.c  sdlinit.h  sdlmanager.h  sdltext.c  sdltext.h
src/sdlview/nuklear/: nuklear_sdl_renderer.h
